fix footer spacing

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -42,7 +42,7 @@
   }
 
   ul {
-    @apply my-6 ml-6 list-disc [&>li]:mt-2;
+    @apply my-0 ml-6 list-disc [&>li]:mt-2;
   }
   
 /*
